# Solana-TicketApp

./: .gitignore  README.md
BlockChain-TicketApp/BlockChain-TicketApp/: BlockChain_TicketAppApp.swift  ContentView.swift
BlockChain-TicketApp/BlockChain-TicketApp.xcodeproj/: project.pbxproj
BlockChain-TicketApp/BlockChain-TicketApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
BlockChain-TicketApp/BlockChain-TicketApp/Assets.xcassets/ExamplePicture.imageset/: Contents.json
BlockChain-TicketApp/BlockChain-TicketApp/Assets.xcassets/Logo.imageset/: Contents.json
BlockChain-TicketApp/BlockChain-TicketApp/Assets.xcassets/SolanaButton.imageset/: Contents.json
BlockChain-TicketApp/BlockChain-TicketApp/Assets.xcassets/simple.imageset/: Contents.json
BlockChain-TicketApp/BlockChain-TicketApp/Model/: MockModel.swift  Model.swift  PreviewModel.swift
BlockChain-TicketApp/BlockChain-TicketApp/Model/ModelObjects/: ApiDto.swift  Collectable.swift  Collection.swift  CollectionNFT.swift  OrganizationEvent.swift  (+3 more)
BlockChain-TicketApp/BlockChain-TicketApp/Solana/: AccountInfo.swift  SolanaService.swift  SolanaService2.swift
backend/: .env  Dockerfile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/server/: main.ts  web3.ts
ticketapp/: Anchor.toml  README.md
ticketapp/programs/ticketapp/: Cargo.toml
ticketapp/programs/ticketapp/src/: lib.rs
ticketapp/programs/ticketapp/src/dot/: program.rs
ticketapp/programs_py/: ticketapp.py
ticketapp/tests/: ticketapp.ts
(+47 files in other folders)
